versioned_docs/version-16.x/02.complete/03.guides/01.syncPublisher/02.publishConfig/01.config.md
---
title: Publisher config
---
# uSync.Publisher Config

 The majority of the uSync publisher config lives in the Database, and can be synced between your servers via the dashboard.

## AppId/AppKey

For your servers to communicate securely they will need to have a shared AppId and AppKey, these values have to be placed in the `appsettings.json` file on each server. 

:::tip
When you first open up the uSync.Publisher dashboard, uSync will prompt you to create an AppId and AppKey. you can cut and paste the JSON from that dialog box directly into your appsettings.json file.
:::

```json
{
  "uSync": {
    "Publisher": {
      "Settings": {
        "IncomingEnabled": true,
        "AppId": "****************",
        "AppKey": "****************"
      }
    }
  }
}
```
## appsettings.json config File

While most settings are now stored in the DB, there are a few settings you can control per server via the `appsettings.json` file:

```json title='appsettings.json'
{
  "uSync": {
    "Publisher": {
      "Settings": {
        "IncomingEnabled": true,
        "OutgoingEnabled": true, 
        "AppId": "****************",
        "AppKey": "****************",
        "Publisher": "Realtime",
        "CleanReports": true,
        "PageSize": 50,
        "MediaPageSize": 5,
        "AdditionalFolders": "",
        "SystemFolders" : "",
        "SystemExclusions" : "",
        "FileReplacements" : "",
        "IncludeHost" : true,
        "ForstHostOption" : false,
        "UserAgentString" : "",
        "RequestHeaders" : {
          "header one": "custom value",
          "header two": "custom value two"
        },
      }
    }
  }
}
```


### incomingEnabled 
<!--| true/false |--> 
Turns this server on/off for incoming requests. With this setting off the server cannot be published to or pulled from.

### outgoingEnabled 
<!--| true/false | -->
Enables this server sending publish requests. With this setting off, you will not see the publish/pull options in Umbraco.

### AppId 
<!--| string | -->
Application ID used alongside AppKey to sign and check any communication between instances.

### AppKey 
<!--| string | -->
Key used to sign communications.

### Publisher
 <!--| string |--> 
The type of Publisher to use when pushing and pulling content.

### CleanReports 
<!--| true/false |--> 
Turns on/off the trimming of folders after the report stage (this makes imports quicker as less is rechecked).

### PageSize 
<!--| 50 |-->
How many items are in a 'page' of data sent between servers.

### MediaPageSize 
<!--| 5 |-->
How many media items are in a 'page' of data sent between servers, as media is compressed and sent in pages between servers changing this value will change the size of those compressed files.

### EnableRollback
A rollback folder will be created for each sync, ensuring a backup if it all goes wrong.

### AdditionalFolders 
<!-- | ~/Views, ~/wwwroot/css, ~/wwwroot/scripts |--> 
List of folders to include.

### SystemFolders 
What folders are considered system folders (e.g bin).

### SystemExclusions 
<!--| ~/bin,~/app_plugins |--> 
Things to exclude from system.

### FileReplacements 
Things that might be replaced inside a file.

### RenameUsingAssembly
Do we rename any instances of your site name in the viewimports file. This setting is on by default. 

### MaxRequestBodySize
Maximum request size. The default is 500mb, if you set it to zero there is no limit.

### RequestTimeout
Timeout for http requests in seconds.

### IncludeHost 
<!--| true/false |--> 
If the hostname is included as part of the signature when signing requests between sites. Turning this value off may make it possible to replay requests on another server. 

### ForceHostOption 
<!--| true/false |--> 
If true uSync will require a hostname as part of the sync.

### UserAgentString 
Set the user agent string.

###  SeedServerUrl 
This setting is the equivalent of clicking the 'sync' button on a site, but as a pull. All server settings will be pulled from the other site.

### RequestHeaders  
Add your own custom header key pairs that will get added to every request.

```json
"RequestHeaders": {
   "header one": "custom value",
   "header two": "custom value two"
}
```
### AllowDeletingOfOrphanedItemsForAllTypes

:::danger
 Use of this setting could badly break your site. We **do not** advise turning it on unless you are 100% sure you know what you're doing. 
:::

Enabling this setting allows you to remove 'missing' datatypes and doctypes. However, this could have a knock-on effect of **removing *all* associated content and media from your site.** We strongly advise you do not enable it. 

This setting is set to false by default. 

### AllowDeletingOfOrphanedItemsForTypes

:::danger
 Use of this setting could badly break your site. We **do not** advise turning it on unless you are 100% sure you know what you're doing. 
:::

```json
"Publisher": {
    "Settings": {
      "AllowDeletingOfOrphanedItemsForTypes": 
          ["document-type", "media-type"]
    }
```
Content and media types always have the 'delete missing' feature available. Enabling this setting turns the 'delete missing' feature on for additional [EntityTypes](https://github.com/umbraco/Umbraco-CMS/blob/contrib/src/Umbraco.Core/Constants-UdiEntityType.cs) for the Umbraco objects. When pushing these extra objects, uSync will delete orphaned items. 

As with a lot of settings that permit automatic deleting, enabling this can badly break your site, and we reccomend you do not enable it unless you're sure about the potential consequences.

### AllowDeletingOfOrphanedItemsFromRoot

:::danger
 Incorrect use of this setting could delete whole sites from your installation. We **do not** advise turning it on unless you are 100% sure you know what you're doing. 
:::

Enabling this setting allows uSync to remove orphaned items from the root of your site. This can lead to the deletion of your **entire site**, and we *highly* reccomend you do not enable it.

This setting is set to false by default.

